import { WardrobeScreen } from '@/features/wardrobe/wardrobe-screen'

export default WardrobeScreen
